src/parser/snapshots/almond__parser__statement__tests__switch_stmt-3.snap
---
source: src/parser/statement.rs
expression: "parse_stmt(\"switch (x) {\n                    case t:\n                        break;\n                    default:\n                        something;\n                        break;\n                    case other:\n                        break;\n                }\".into()).unwrap().1"
---
{
  "type": "SwitchStatement",
  "discriminant": {
    "type": "Identifier",
    "name": "x",
    "start": 8,
    "end": 9
  },
  "cases": [
    {
      "type": "SwitchCase",
      "test": {
        "type": "Identifier",
        "name": "t",
        "start": 38,
        "end": 39
      },
      "consequent": [
        {
          "type": "BreakStatement",
          "label": null,
          "start": 65,
          "end": 71
        }
      ],
      "start": 33,
      "end": 71
    },
    {
      "type": "SwitchCase",
      "test": null,
      "consequent": [
        {
          "type": "ExpressionStatement",
          "expression": {
            "type": "Identifier",
            "name": "something",
            "start": 125,
            "end": 134
          },
          "start": 125,
          "end": 135
        },
        {
          "type": "BreakStatement",
          "label": null,
          "start": 160,
          "end": 166
        }
      ],
      "start": 92,
      "end": 166
    },
    {
      "type": "SwitchCase",
      "test": {
        "type": "Identifier",
        "name": "other",
        "start": 192,
        "end": 197
      },
      "consequent": [
        {
          "type": "BreakStatement",
          "label": null,
          "start": 223,
          "end": 229
        }
      ],
      "start": 187,
      "end": 229
    }
  ],
  "start": 0,
  "end": 247
}
